--- a/app/index.html
+++ b/app/index.html
@@ -54,73 +54,59 @@
 		</div> 
 	</nav>	
 	<div class="wrapper">	
-		<section id="header-back">		
-			<header class="header-main">
-				<div class="container">
-					<div class="row">
-						<figure class="intro-logo">
-						 	<img src="/image/logo1.png" class="logotype-intro" title="Лого фирмы Fidez" alt="logo1part">
-		                 	<img src="/image/logo2.png" class="logotype-intro2" title="Лого фирмы Fidez" alt="logo2part">
-							<figcaption class="introtext">
-								<h1>Создание сайтов в Кривом Роге.</h1>
-									<p class="logo-description">Студия дизайна FideZ.com – команда профессионалов знающих свое дело, понимающих суть работы и желания клиента.</p>
-							</figcaption>
-						</figure>
-					</div>
-				</div>		
-			</header>
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-6 col-md-6 col-lg-6">
-						<div class="row">
-							<div class="title-dev-img">
-								<img src="image/old-clock.png" title="Опыт работы" alt="old-clock">
-							</div>
-							<div class="title-dev-text">
-								<h2><p>Нам <span id="old-year" class=""></span> лет</p></h2>		
-							</div>			
-						</div>
-						<div class="row">
-							<div class="title-dev-img">
-								<img src="image/complete.png" title="Успешно завершенные проекты" alt="project-Complete">
-							</div>
-							<div class="title-dev-text">
-								<h2><p>Более <span id="project"></span> успешно завершенных проектов</p></h2>		
-							</div>
-						</div>
-						<div class="row">
-							<div class="title-dev-img">
-								<img src="image/hand.png" title="Партнерские отношения" alt="uniq-dev">
-							</div>
-							<div class="title-dev-text">
-								<h2><p><span></span>Индивидуальная разработка</p></h2>		
-							</div>
-						</div>				
-					</div>
-					<div class="col-sm-6 col-md-6 col-lg-6 bor-left">
-						<h3>Оставить заявку на проект</h3>
-						<form action="" method="post" id="application-form" class="form-inline">
-							<div class="form-group">
-								<label for="form-username">Имя пользователя</label>
-								<input id="form-username" type="text" name="username" class="form-control" tabindex="0" size="25" placeholder="Введите в формате" required>
-							</div>
-							<div class="form-group">
-								<label id="descr" for="phone_mask">Телефон для контакта</label>
-								<input type="text" id="customer_phone" name="userphone" class="form-control" tabindex="0" size="25" value="7" required>
-							</div>
-							<div class="form-group">
-								<input type="checkbox" id="phone_mask" checked>
-								<label id="descr" for="phone_mask">Маска ввода</label>
-							</div><br>
-							<button type="submit" class="btn btn-default">Заказать</button>
-						</form>
-				</div>				
-			</div>
-			</div>
-			<div class="btn-next">
-				<a href="#article-n1" style="text-decoration: none;"><i class="fa fa-angle-double-down"></i></a>
-			</div>		
-		</section>
+		    <section id="header-back">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 col-md-6 col-lg-6">
+                    <div class="row">
+                        <div class="title-dev-img">
+                            <img src="image/old-clock.png" title="Опыт работы" alt="old-clock">
+                        </div>
+                        <div class="title-dev-text">
+                            <h2><p>Нам <span id="old-year" class=""></span> лет</p></h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="title-dev-img">
+                            <img src="image/complete.png" title="Успешно завершенные проекты" alt="project-Complete">
+                        </div>
+                        <div class="title-dev-text">
+                            <h2><p>Более <span id="project"></span> успешно завершенных проектов</p></h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="title-dev-img">
+                            <img src="image/hand.png" title="Партнерские отношения" alt="uniq-dev">
+                        </div>
+                        <div class="title-dev-text">
+                            <h2><p><span></span>Индивидуальная разработка</p></h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-6 col-lg-6 bor-left">
+                    <h3>Оставить заявку на проект</h3>
+                    <form action="" method="post" id="application-form" class="form-inline">
+                        <div class="form-group">
+                            <label for="form-username" class="user-login">Имя пользователя</label>
+                            <input id="form-username" type="text" name="username" class="form-control" tabindex="0" size="25" placeholder="Введите в формате" required>
+                        </div>
+                        <div class="form-group">
+                            <label id="descr" for="phone_mask" class="user-phone">Телефон для контакта</label>
+                            <input type="text" id="customer_phone" name="userphone" class="form-control" tabindex="0" size="25" value="7" required>
+                        </div>
+                        <div class="form-group">
+                            <input type="checkbox" id="phone_mask" checked>
+                            <label id="descr" for="phone_mask">Маска ввода</label>
+                        </div><br>
+                        <button type="submit" class="btn btn-default to-order">Заказать</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="btn-next">
+            <a href="#article-n1" style="text-decoration: none;"><i class="fa fa-angle-double-down"></i></a>
+        </div>
+    </section>
 	<!-- Content -->
 	<article id="article-n1">
 		<div class="container">
